--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
     "core-js": "^3.8.3",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3",
     "vue": "^3.2.13"
   },
   "devDependencies": {
